--- a/OCS/requirements.txt
+++ b/OCS/requirements.txt
@@ -20,3 +20,16 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 six==1.16.0
 et-xmlfile==1.1.0
+
+# Database Connector (for sync engine)
+mysql-connector-python==8.4.0
+
+# Testing
+pytest==8.3.3
+pytest-django==4.9.0
+pytest-cov==5.0.0
+
+# Code Quality
+flake8==7.1.1
+black==24.8.0
+isort==5.13.2
