polish: production-ready deployment, code cleanup, documentation
- Dockerfile: Gunicorn + WhiteNoise instead of runserver
- Settings: WhiteNoise middleware, CSRF_TRUSTED_ORIGINS, STATICFILES_STORAGE
- docker-compose: Gunicorn command, consistent with Dockerfile
- CI: Fix Docker build path (repo root, not OCS/)
- apps.py: Fix class name conflict (AppConfig -> InventarioConfig)
- init.sql: Schema now matches Django model fields
- requirements.txt: Add gunicorn, whitenoise for production
- seed_demo: Management command to populate demo data
- .env.example: Documented SQLite option, SSL redirect config
- .dockerignore: Optimize Docker build context
- CONTRIBUTING.md: Developer onboarding guide
- README: Deploy section (Railway/Render/Fly.io), fixed Docker instructions
- Remove old empty tests.py (tests live in tests/ package)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,6 +156,4 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build Docker image
-        run: |
-          cd OCS
-          docker build -t etecsa-asset-sync:ci .
+        run: docker build -t etecsa-asset-sync:ci .
