--- a/OCS/.env.example
+++ b/OCS/.env.example
@@ -1,9 +1,17 @@
+# ============================================================
+# ETECSA Asset Sync — Environment Configuration
+# ============================================================
+# Copy this file to .env and edit with your values:
+#   cp .env.example .env
+# ============================================================
+
 # Django Settings
 SECRET_KEY=your-secret-key-here
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database Configuration
+# ---- Option A: MySQL (production) ----
 DB_ENGINE=django.db.backends.mysql
 DB_NAME=ocsweb
 DB_USER=root
@@ -11,9 +19,21 @@ DB_PASSWORD=your-password-here
 DB_HOST=localhost
 DB_PORT=3306
 
+# ---- Option B: SQLite (local demo, no MySQL needed) ----
+# DB_ENGINE=django.db.backends.sqlite3
+# DB_NAME=db.sqlite3
+# DB_USER=
+# DB_PASSWORD=
+# DB_HOST=
+# DB_PORT=
+
 # Script Configuration
 EXCEL_ECONOMIA=demo_data/AR01_demo.xlsx
 EXCEL_CLASIFICADOR=demo_data/clasificador_demo.xlsx
 TABLA_ACCOUNTINFO=accountinfo
 COLUMNA_INVENTARIO=fields_3
 ARCHIVO_REGISTRO=Registros.txt
+
+# Production Security (only matters when DEBUG=False)
+# Set to False if behind a reverse proxy that handles SSL
+SECURE_SSL_REDIRECT=True
